fix: fixing-update-project